--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "php": ">=5.5.0",
         "syrma/web-container": "dev-master",
         "symfony/framework-bundle": "~2.3",
-        "symfony/psr-http-message-bridge": "~0.2"
+        "symfony/psr-http-message-bridge": "~0.2",
+        "zendframework/zend-diactoros":  "1.*"
 
     },
     "require-dev": {
